fix flex wrap

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -88,6 +88,7 @@
       }
     }
     main {
+      flex: 1 1;
       padding: 0 32px;
       width: 100%;
     }
